@@ -1,3 +1,9 @@
+2007-07-13  Matthew Allum  <mallum@openedhand.com>
+
+	* Sato/matchbox/Makefile.am:
+	* Sato/matchbox/theme.xml:
+	Add a down arrow for menus.
+
 2007-07-11  Matthew Allum  <mallum@openedhand.com>
 
 	* Sato/matchbox/Makefile.am:
